feat(frontend): 添加前端 Docker 部署配置
部署配置:
- 创建前端 Dockerfile（多阶段构建）
- 添加 nginx 配置文件（静态文件托管 + API 代理）
- 更新 docker-compose.yml，添加前端服务
- 端口映射：30000:80

前端优化:
- 添加 build:prod 命令（跳过类型检查）
- 配置 Gzip 压缩
- 静态资源缓存（1年）
- API 自动代理到后端

部署说明:
- 创建完整的部署文档（docs/DEPLOYMENT.md）
- 只需开放端口 30000
- 前端通过 nginx 代理 API 请求
- 提高安全性，后端无需暴露

访问地址: http://服务器IP:30000

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,19 @@ services:
         condition: service_healthy
     restart: unless-stopped
 
+  weiqi-frontend:
+    build:
+      context: ./weiqi-frontend
+      dockerfile: Dockerfile
+    container_name: weiqi-frontend
+    ports:
+      - "30000:80"
+    networks:
+      - weiqi-network
+    depends_on:
+      - weiqi-backend
+    restart: unless-stopped
+
 volumes:
   mongo-data:
 
